# 3D-GameEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libraries/GLAD/include/glad/: glad.h
libraries/GLAD/src/: glad.c
shaders/: default.fs  default.vs  light.fs
src/: Camera.hpp  ErrorHandeler.hpp  Mesh.hpp  Texture.hpp  common.hpp  main.cpp  shader.hpp  window.hpp
